# python-polylith-editable-projects

./: LICENSE  README.md  main.py  pyproject.toml  workspace.toml
bases/my_namespace/my_example_base/: __init__.py  core.py
bases/my_tdd_base/src/my_namespace/my_tdd_base/: __init__.py
bases/my_tdd_base/test/my_namespace/my_tdd_base/: test_core.py
components/my_namespace/my_component/: __init__.py  core.py  my_comp.py
components/my_namespace/my_example_component/: __init__.py  my_example.py
components/my_namespace/my_other_component/: __init__.py  core.py
components/my_namespace/my_other_example_component/: __init__.py  uses_my_example.py
projects/my_example_project/: pyproject.toml
projects/my_example_project/src/my_example_project/: __init__.py  core.py
projects/my_example_project/test/my_example_project/: test_core.py
projects/my_other_project/: pyproject.toml
projects/my_other_project/src/my_other_project/: __init__.py
projects/my_other_project/test/my_other_project/: test_core.py
test/: conftest.py
test/bases/my_namespace/my_example_base/: test_core.py
test/components/my_namespace/my_component/: test_core.py  test_my_comp.py
test/components/my_namespace/my_example_component/: test_core.py
test/components/my_namespace/my_other_component/: test_core.py
test/components/my_namespace/my_other_example_component/: test_core.py
test/fixtures/: env.py
